--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News App</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <nav>
@@ -78,6 +78,6 @@
       </div>
     </template>
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
